--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,1 @@
-custom: ['bittmax.de', 'https://mc-host24.de/user/affiliate/3121', 'milrato.eu', "musicium.eu"]
+custom: ['milrato.eu', 'dc.milrato.eu', 'bero.milrato.eu', 'bittmax.milrato.eu' ]
