--- a/application.yml
+++ b/application.yml
@@ -12,8 +12,8 @@ lavalink:
       vimeo: true
       http: true
       local: false
-    bufferDurationMs: 400 # The duration of the NAS buffer. Higher values fare better against longer GC pauses
-    frameBufferDurationMs: 5000 # How many milliseconds of audio to keep buffered
+    bufferDurationMs: 200 # It cant be lower then 200 ... it's capped there
+    frameBufferDurationMs: 200 # How many milliseconds of audio to keep buffered
     youtubePlaylistLoadLimit: 6 # Number of pages at 100 each
     playerUpdateInterval: 5 # How frequently to send player updates to clients, in seconds
     youtubeSearchEnabled: true
